# wid_income_chart

./: app.py  pyproject.toml  requirements.txt
wid_all_data/: WID_data_AD.csv  WID_data_AG.csv  WID_data_AI.csv  WID_data_AS.csv  WID_data_AW.csv  WID_data_BB.csv  WID_data_BL.csv  WID_data_BM.csv  WID_data_BQ.csv  WID_data_CK.csv  WID_data_CN-RU.csv  WID_data_CN-UR.csv  WID_data_CS.csv  WID_data_CW.csv  WID_data_DD.csv  WID_data_DM.csv  WID_data_EH.csv  WID_data_FJ.csv  WID_data_FK.csv  WID_data_FM.csv  WID_data_FO.csv  WID_data_GD.csv  WID_data_GG.csv  WID_data_GI.csv  WID_data_GL.csv  WID_data_GU.csv  WID_data_IM.csv  WID_data_JE.csv  WID_data_KI.csv  WID_data_KN.csv  WID_data_KY.csv  WID_data_LC.csv  WID_data_LI.csv  WID_data_MC.csv  WID_data_MF.csv  WID_data_MH.csv  WID_data_MP.csv  WID_data_MS.csv  WID_data_NC.csv  WID_data_NR.csv  (+408 more)
