[tool.poetry]
name = "wid-income-chart"
version = "0.1.0"
description = ""
authors = ["Dev Aggarwal <devxpy@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
babel = "^2.17.0"
plotly = "^6.3.0"
streamlit = "^1.48.1"
requests = "^2.32.4"
pandas = "^2.3.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
